Inserido cor no icone do carrinho

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="https://freepngimg.com/download/web_design/42851-3-cart-free-clipart-hd.png" />
+    <link rel="icon" href="https://www.pngkey.com/png/full/117-1170085_cart-logo-toko-online-png.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
